2006-06-13  Derek Price  <derek@ximbiot.com>

	* admin.c (wescape): Suppress compiler warning.

2006-06-12  Jim Hyslop <jhyslop@dreampossible.ca>

	* update.c: revert changes, since Derek fixed it in rev 1.262

2006-06-11  Jim Hyslop <jhyslop@dreampossible.ca>

	* server.h, server.c, update.c: wrap various server-related functions
	in #ifdef SERVER_SUPPORT directives, to allow clients to compile.

2006-06-10  Derek Price  <derek@ximbiot.com>

	* sanity.sh (conflicts4): Don't expect specific file permissions.  Use
	$PLUS.

2006-06-09  Mark D. Baushke  <mdb@gnu.org>

	* admin.c (admin_fileproc): Used by NetBSD, add 'X' to the
	pantheon of history record types to keep "cvs admin" command
	information.
	* history.c: Document addition of the 'X' history record type.
	(report_hrecs): Add support for printing the 'X' record type.
	* history.h (ALL_HISTORY_REC_TYPES): Add 'X' to the list.
	* sanity.sh (history, modes): Add tests for 'X' record types.
	(conflicts4-11r, conflicts4-13r): Fix expectations for remote and
	proxy where $TESTDIR may not be default.
	
2006-06-08  Derek Price  <derek@ximbiot.com>

	* sanity.sh (conflicts4): Test that the client honors Empty-conflicts.

	* sanity.config.sh.in: Add DEFAULT_SIGN_TEMPLATE &
	DEFAULT_SIGN_TEXTMODE.
	* sanity.sh: Test verification of concatenated signatures.
	(openpgp-5): Skip when only first concatenated signature is reported.

	* sanity.sh: Look for the config file in more places and make it a
	fatal error if an explicitly specified file is not found.

	* server.c (requests): Add "Empty-conflicts" marker.
	* client.c (send_fileproc): Send contents of all files with conflicts
	unless the server can handle the conflict marker in the Entry.
	* sanity.sh (writeproxy, writeproxy-noredirect): Compensate for the new
	Empty-conflicts request.

	* sanity.sh (conflicts4): New tests.
	(Original patch from Mark D. Baushke <mdb@gnu.org>.)

2006-06-07  Derek Price  <derek@ximbiot.com>

	* sign.c: #include <limits.h> for ULONG_MAX.